[package]
name = "random_color"
version = "0.8.0"
edition = "2021"
authors = ["Lucas Maximiliano Marino <lucasmmarino@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["random", "color", "rgb", "rgba", "hsl"]
repository = "https://github.com/elementh/random_color.git"
homepage ="https://github.com/elementh/random_color"
description = "Rust crate for generating random attractive colors"

[features]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
