[package]
name = "random_color"
version = "1.1.0"
edition = "2021"
authors = ["Lucas Maximiliano Marino <lucasmmarino@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["random", "color", "rgb", "rgba", "hsl"]
repository = "https://github.com/elementh/random_color.git"
homepage = "https://github.com/elementh/random_color"
description = "Rust crate for generating random attractive colors"

[features]
rgb_support = ["dep:rgb"]
palette_support = ["dep:palette"]
ecolor_support = ["dep:ecolor"]

[dependencies]
rand = { version = "0.9", features = ["small_rng"] }
rgb = { version = "0.8.50", optional = true }
palette = { version = "0.7.6", optional = true }
ecolor = { version = "0.31", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
